--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "smarty-formatter",
-	"displayName": "Smarty Formatter",
-	"description": "Smarty template support with formatting, folding, snippets, syntax highlighting and more",
+	"name": "tpl-formatter",
+	"displayName": "TPL Formatter for Smarty Template Engine",
+	"description": "TPL Formatter for Smarty Template Engine with formatting, folding, snippets, syntax highlighting and more",
 	"author": {
 		"name": "Oktay Aydoğan",
 		"email": "aydoganooktay@gmail.com"
@@ -16,7 +16,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/oktayaydogan/smarty-formatter.git"
+		"url": "https://github.com/oktayaydogan/tpl-formatter.git"
 	},
 	"categories": [
 		"Programming Languages",
@@ -90,7 +90,7 @@
 		},
 		"configuration": {
 			"type": "object",
-			"title": "Smarty Formatter",
+			"title": "TPL Formatter for Smarty Template Engine",
 			"properties": {
 				"smarty.highlight": {
 					"type": "boolean",
